# digital-asset-validator-plugin

./: README.md  docker-compose.yml
plerkle/: Readme.md
plerkle/src/: accounts_selector.rs  error.rs  example-config.json  geyser_plugin_nft.rs
plerkle_messenger/: Cargo.toml  Readme.md
plerkle_messenger/src/: error.rs  lib.rs  log_dropped_msg.rs  plerkle_messenger.rs  redis_messenger.rs
plerkle_serialization/: Readme.md
plerkle_serialization/src/serializer/: serializer_stable.rs
